--- a/BeneluxWebb/templates/stats/stats_elo.html
+++ b/BeneluxWebb/templates/stats/stats_elo.html
@@ -10,7 +10,7 @@
         </div>
 
         <div class="sidebar-body">
-            <div class="filter-container open" data-filter-name="countries">
+            <div class="filter-wrapper open" data-filter-name="countries">
                 <div class="filter-header">
                     <span>Countries</span>
                     <span class="filter-indicator"></span>
@@ -21,7 +21,7 @@
                 </div>
             </div>
 
-            <div class="filter-container" data-filter-name="elo_range">
+            <div class="filter-wrapper" data-filter-name="elo_range">
                 <div class="filter-header">
                     <span>Elo range</span>
                     <span class="filter-indicator"></span>
