--- a/BeneluxWebb/templates/base.html
+++ b/BeneluxWebb/templates/base.html
@@ -61,9 +61,10 @@
 
           <ul class="nav-links">
             <li><a href="/esea">ESEA</a></li>
-            <li><a href="/hub">Hub</a></li>
-            <li><a href="/matches">Matches</a></li>
             <li><a href="/stats">Stats</a></li>
+            <li><a class="disabled" data-bs-toggle="tooltip" data-bs-placement="bottom" title="soooon™™™">Hub</a></li>
+            <li><a class="disabled" data-bs-toggle="tooltip" data-bs-placement="bottom" title="soooon™™™">Matches</a></li>
+            <li><a class="disabled" data-bs-toggle="tooltip" data-bs-placement="bottom" title="soooon™™™">Events</a></li>
           </ul>
 
           <!-- <div class="darkmode-toggle">
