Fixed search box

--- a/BeneluxWebb/templates/esea/_esea_season.html
+++ b/BeneluxWebb/templates/esea/_esea_season.html
@@ -293,7 +293,7 @@
                     <div class="details-box-header">
                         Player Statistics
                         <a class="details-refer btn btn-custom"
-                            href="/stats/player?events=esea&seasons={{ team.season_number }}&divisions={{ team.division_name }}&teams_name={{ team.team_name }}">
+                            href="/stats/player?events=esea&seasons={{ team.season_number }}&divisions={{ team.division_name }}&teams={{ team.team_name }}">
                             View All Stats
                         </a>
                     </div>
