--- a/BeneluxWebb/templates/stats/stats_player.html
+++ b/BeneluxWebb/templates/stats/stats_player.html
@@ -94,7 +94,7 @@
                     <span class="arrow"></span>
                 </div>
                 <div class="filter-body">
-                    {{ search_box.search_box("teams", "Search teams", filter_options["teams"]) }}
+                    {{ search_box.search_box("teams", "Search teams", multiselect=false, filter_options=filter_options["teams"]) }}
                 </div>
             </div>
 
