--- a/BeneluxWebb/templates/base.html
+++ b/BeneluxWebb/templates/base.html
@@ -18,11 +18,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
 
-    <!-- CSS: DataTables, Daterangepicker, Bootstrap Select -->
+    <!-- CSS: DataTables, Daterangepicker, Bootstrap Select, Select2 -->
     <link href="https://cdn.datatables.net/v/bs5/dt-2.3.4/b-3.2.5/b-colvis-3.2.5/b-html5-3.2.5/cc-1.1.0/fc-5.0.5/fh-4.0.3/r-3.0.6/sc-2.4.3/sb-1.8.4/sp-2.3.5/sl-3.1.0/sr-1.4.2/datatables.min.css" rel="stylesheet" integrity="sha384-cqV69OaDubyp7ZbVI2ap4sM2oVenQw56aYor7qVdt3SeNmRh+ER48zELgNmgPuiT" crossorigin="anonymous">
     
     <link href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta3/dist/css/bootstrap-select.min.css" rel="stylesheet">
+
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+
 
     <!-- Custom base CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/base/darkmode.css') }}">
@@ -143,6 +146,7 @@
   <script src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
   <script src="https://cdn.datatables.net/v/bs5/dt-2.3.4/b-3.2.5/b-colvis-3.2.5/b-html5-3.2.5/cc-1.1.0/fc-5.0.5/fh-4.0.3/r-3.0.6/sc-2.4.3/sb-1.8.4/sp-2.3.5/sl-3.1.0/sr-1.4.2/datatables.min.js" integrity="sha384-KN0jHdzhFu43Kc+CvHGtiJxoKNvZGY118F7v22BuvGFNLFQVkOzkVIwaWn1ayase" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.6.2/dist/fuse.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.7.1/nouislider.min.js"></script>
 
