--- a/BeneluxWebb/templates/esea/esea.html
+++ b/BeneluxWebb/templates/esea/esea.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/pages/esea/esea_cards.css') }}">
 {% endblock %}
 
-{% block title %}ESEA{% endblock %}
+{% block title %}{{ super() }} | ESEA{% endblock %}
 
 {% block content %}
 
