--- a/BeneluxWebb/static/css/pages/esea/esea_cards.css
+++ b/BeneluxWebb/static/css/pages/esea/esea_cards.css
@@ -31,6 +31,7 @@
   font-size: 0.875rem;
   cursor: pointer;
   box-shadow: 0 .125rem .5625rem -0.125rem rgba(0,0,0,.6);
+  transition: background 0.2s ease;
 }
 .btn.btn-custom:hover {
   background-color: var(--accent);
