--- a/BeneluxWebb/templates/esea/esea.html
+++ b/BeneluxWebb/templates/esea/esea.html
@@ -20,6 +20,13 @@
 <!-- center-aligned tabs -->
 <div class="esea-page-wrapper">
   <div class="sidebar left">
+    <div class="sidebar-content">
+      <div class="sidebar-header hoverable">
+        <a href="https://discord.gg/9xzsGTGhjm" target="_blank" rel="noopener noreferrer" style="margin: 10px 5px">
+          <img src="{{ url_for('static', filename='img/join_discord.png') }}" alt="Join the Discord" class="img-fluid sidebar-discord"/>
+        </a>
+      </div>
+    </div>
   </div>
 
   <div class="esea-wrapper">
@@ -37,7 +44,7 @@
               {% if current_time >= season.event_start and current_time <= season.event_end %}
                 {% set label = "LIVE" %}
               {% elif current_time >= season.event_start - 604800 and current_time < season.event_start %}
-                {% set label = "SOON" %}
+                {% set label = "Starting Soon" %}
               {% endif %}
             {% endif %}
             <li class="nav-item" role="presentation">
@@ -51,7 +58,7 @@
 
                 <span>S-{{ season.season_number }}</span>
                 {% if label %}
-                  <span class="badge bg-secondary">{{ label }}</span>
+                  <span class="badge nav-badge">{{ label }}</span>
                 {% endif %}
               </button>
             </li>
